--- a/kivy_glow/uix/colorpicker/colorpicker.kv
+++ b/kivy_glow/uix/colorpicker/colorpicker.kv
@@ -59,9 +59,9 @@
                             size_hint: 1, None
                             height: '200dp'
                             on_touch_move:
-                                return root.on_select_color_from_gradient(*args)
+                                root.on_select_color_from_gradient(*args)
                             on_touch_down:
-                                return root.on_select_color_from_gradient(*args)
+                                root.on_select_color_from_gradient(*args)
                         GlowSlider:
                             canvas.before:
                                 Color:
