--- a/kivy_glow/uix/map/map.kv
+++ b/kivy_glow/uix/map/map.kv
@@ -40,6 +40,7 @@
 <GlowMapMarkerPopup>:
     RelativeLayout:
         id: placeholder
-        y: root.top
+        size_hint: None, None
         center_x: root.center_x
-        size: root.popup_size
+        y: root.top
+        size: 0, 0
