--- a/kivy_glow/uix/toolbar/toolbar.kv
+++ b/kivy_glow/uix/toolbar/toolbar.kv
@@ -8,6 +8,7 @@
         spacing: '5dp'
     GlowLabel:
         id: glow_toolbar_title
+        pos_hint: {'center_x': 0.5,'center_y': 0.5}
         text: root.title if root.title else ''
         font_style: root.title_font_style
         halign: root.title_halign
