--- a/kivy_glow/uix/icon/icon.kv
+++ b/kivy_glow/uix/icon/icon.kv
@@ -7,17 +7,17 @@
     font_style: ''
     GlowLabel:
         id: glow_icon_badge
-        adaptive_size: True
-        text: (u'{}'.format(icons[root.badge_content]) if root.badge_content in icons else 'blank') if root.badge_font_name == 'Icons' else (root.badge_content if root.badge_content != '' else ' ')
+        text: u'{}'.format(icons[root.badge_content]) if root.badge_content in icons.keys() else root.badge_content
+        font_name: 'Icons' if root.badge_content in icons.keys() else root.badge_font_name
         hidden: True if root.badge_content == '' else False
         border_radius: root.badge_border_radius
         border_width: root.badge_border_width
         border_color: root.badge_border_color
-        font_name: root.badge_font_name
         font_size: root.icon_size / 3
         bg_color: root.badge_bg_color
         padding: root.badge_padding
         color: root.badge_color
+        adaptive_size: True
         font_style: ''
         bold: True
         pos:
