--- a/kivy_glow/uix/expansionpanel/expansionpanel.kv
+++ b/kivy_glow/uix/expansionpanel/expansionpanel.kv
@@ -1,4 +1,4 @@
 <GlowExpansionPanel>:
-    spacing: ['10dp', ]
-    padding: ['10dp', ]
-    border_radius: ['10dp', ]
+    border_radius: ('10dp', )
+    spacing: ('10dp', )
+    padding: ('10dp', )
