--- a/kivy_glow/uix/checkbox/checkbox.kv
+++ b/kivy_glow/uix/checkbox/checkbox.kv
@@ -1,9 +1,9 @@
 <GlowCheckbox>:
-    size_hint: None, None
     size: glow_checkbox_icon.size
+    size_hint:( None, None)
     GlowIcon:
         id: glow_checkbox_icon
-        adaptive_size: True
-        pos: root.pos
-        icon: root._icon
         color: root._color if not root.disabled else self.theme_cls.disabled_color
+        adaptive_size: True
+        icon: root._icon
+        pos: root.pos
