--- a/kivy_glow/uix/filemanager/filemanager.kv
+++ b/kivy_glow/uix/filemanager/filemanager.kv
@@ -9,10 +9,10 @@
         badge_color: self.theme_cls.opposite_text_color
         color: self.theme_cls.primary_color
         badge_content: root.obj_in_folder
-        badge_border_radius: ['8dp']
+        badge_border_radius: ('8dp', )
         pos_hint: {'center_y': 0.5}
-        icon: root.icon
         icon_size: '32dp'
+        icon: root.icon
     GlowLabel:
         pos_hint: {'center_y': 0.5}
         text: root.display_name
@@ -27,23 +27,23 @@
         badge_color: self.theme_cls.opposite_text_color
         color: self.theme_cls.primary_color
         badge_content: root.obj_in_folder
-        badge_border_radius: ['8dp']
+        badge_border_radius: ('8dp', )
         pos_hint: {'center_y': 0.5}
-        icon: root.icon
         icon_size: '32dp'
+        icon: root.icon
     GlowLabel:
-        text: root.display_name
         pos_hint: {'center_y': 0.5}
+        text: root.display_name
         adaptive_height: True
 
 <GlowFileManager>:
-    size_hint: 1, 1
+    size_hint: (1, 1)
     GlowBoxLayout:
         orientation: 'vertical'
         GlowToolBar:
             id: glow_filemanager_toolbar
-            right_buttons:[GlowButton(mode='text', icon='close-box', adaptive_size=True, icon_color=self.theme_cls.primary_light_color, on_release=lambda _: root.dismiss())]
-            left_buttons:[GlowButton(mode='text', icon='chevron-left', adaptive_size=True, icon_color=self.theme_cls.text_color, on_release=root._back)]
+            right_buttons: (GlowButton(mode='text', icon='close-box', adaptive_size=True, icon_color=self.theme_cls.primary_light_color, on_release=lambda _: root.dismiss()), )
+            left_buttons: (GlowButton(mode='text', icon='chevron-left', adaptive_size=True, icon_color=self.theme_cls.text_color, on_release=root._back), )
             title: root.current_path
             title_halign: 'center'
         GlowList:
@@ -55,9 +55,9 @@
     GlowFloatLayout:
         GlowButton:
             id: glow_filemanager_button_select
-            pos: root.right - self.width - dp(15), dp(15)
-            border_radius: ['16dp', ]
+            pos: (root.right - self.width - dp(15), dp(15))
+            border_radius: ('16dp', )
             adaptive_size: True
-            icon_size: dp(42)
+            icon_size: '42dp'
             icon: 'check'
             on_release: root._select()
