--- a/kivy_glow/uix/label/label.kv
+++ b/kivy_glow/uix/label/label.kv
@@ -3,16 +3,16 @@
         Color:
             rgba: self._bg_color
         SmoothRoundedRectangle:
-            size: self.width - 2, self.height - 2
-            pos: self.x + 1, self.y + 1
             radius: self._border_radius if self._border_radius else (0, 0, 0, 0)
+            size: (self.width - 2, self.height - 2)
+            pos: (self.x + 1, self.y + 1)
             source: self.background_image
 
-    disabled_color: self.theme_cls.disabled_color
     text_size: 
         ((self.width if not self.adaptive_width else None,
         self.height if not self.adaptive_height else None)
         if not self.adaptive_size else (None, None))
+    disabled_color: self.theme_cls.disabled_color
     valign: 'center'
 
 <Selector>:
@@ -20,11 +20,11 @@
 
 
 <GlowLabelSelectCopy>:
+    but_selectall: selectall.__self__
     content: content.__self__
     but_copy: copy.__self__
-    but_selectall: selectall.__self__
-    size_hint: None, None
-    size: '200sp', '50sp'
+    size: ('200sp', '50sp')
+    size_hint: (None, None)
     BubbleContent:
         id: content
         BubbleButton:
