--- a/kivy_glow/uix/sidepanel/sidepanel.kv
+++ b/kivy_glow/uix/sidepanel/sidepanel.kv
@@ -1,16 +1,15 @@
 #:import Window kivy.core.window.Window
-<GlowSidePanel>:
-    orientation: 'vertical'
-    size_hint_x: None
-    padding: ['10dp', ]
+<GlowSidePanel>:    
     width: Window.width - dp(56) if Window.width <= dp(376) else dp(320)
     x:
         (self.width * (self.open_progress - 1)) \
         if self.anchor == 'left' \
         else (Window.width - self.width * self.open_progress)
-
+    orientation: 'vertical'
+    padding: ('10dp', )
+    size_hint_x: None
 
 <GlowSidePanelButton>:
     font_style: 'TitleM'
-    padding: ['15dp', ]
+    padding: ('15dp', )
     icon_size: '26dp'
