--- a/kivy_glow/uix/table/table.kv
+++ b/kivy_glow/uix/table/table.kv
@@ -1,11 +1,11 @@
 <GlowTable>:
-    border_radius: ['10dp', ]
-    padding: ['10dp', ]
+    border_radius: ('10dp', )
+    padding: ('10dp', )
     GlowScrollView:
         id: glow_table_header
         size_hint_y: None
         do_scroll: False
-        border_width: [0, 0, 0, 1]
+        border_width: (0, 0, 0, 1)
         border_color: app.theme_cls.divider_color
     RecycleView:
         id: glow_table_view
@@ -15,23 +15,23 @@
         effect_cls: root.effect_cls
         SelectableRecycleBoxLayout:
             id: glow_table_layout
-            orientation: 'vertical'
             default_height: '56dp'
-            default_size_hint: 1, None
+            orientation: 'vertical'
+            default_size_hint: (1, None)
 
-            size_hint_min: self.minimum_width, None
-            size_hint: 1, None
+            size_hint_min: (self.minimum_width, None)
             height: self.minimum_height
-            multiselect: True
             touch_multiselect: True
+            size_hint: (1, None)
+            multiselect: True
     GlowBoxLayout:
         id: glow_table_paginator_container
-        adaptive_height: True
-        padding: ['10dp', ]
         orientation: 'vertical'
+        adaptive_height: True
+        padding: ('10dp', )
 
 <GlowTableRow>:
-    border_width: [0, 0, 0, 1]
+    border_width: (0, 0, 0, 1)
     border_color: app.theme_cls.divider_color
-    padding: ['10dp', ]
+    padding: ('10dp', )
     spacing: dp(5)
