--- a/kivy_glow/uix/dialog/dialog.kv
+++ b/kivy_glow/uix/dialog/dialog.kv
@@ -2,7 +2,7 @@
     border_radius: ('10dp', )
     GlowBoxLayout:
         id: glow_dialog_content
-        padding: ('24dp', ) if root.widget_style == 'desctop' else ('12dp', )
+        padding: ('24dp', ) if root.widget_style == 'desktop' else ('12dp', )
         adaptive_height: True if root.size_hint_y is None else False
         orientation: 'vertical'
         spacing: '5dp'
