--- a/kivy_glow/uix/button/button.kv
+++ b/kivy_glow/uix/button/button.kv
@@ -11,6 +11,6 @@
             id: glow_button_text
             text: root.text if root.text else ''
             font_style: root.font_style
-            pos_hint: {'center_y': 0.5}
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
             color: root._text_color
             adaptive_size: True
