--- a/kivy_glow/uix/filemanager/filemanager.kv
+++ b/kivy_glow/uix/filemanager/filemanager.kv
@@ -52,6 +52,7 @@
             on_item_selected: root.on_filemanager_item_selected(*args)
             on_item_press: root.on_filemanager_item_press(*args)
             list_data: root._content
+            border_radius: (0, )
     GlowFloatLayout:
         GlowButton:
             id: glow_filemanager_button_select
